--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 </head>
 <body>
   <h1>Demo Buttons</h1>
-  <button onclick="sayHello()">Xin chào</button>
-  <button onclick="sayGoodbye()">Tạm biệt</button>
+  <button onclick="sayHello()">Xin chào An</button>
+  <button onclick="sayGoodbye()">Tạm biệt An</button>
 
   <script>
     function sayHello() {
-      alert("Xin chào!");
+      alert("Xin chào! AN");
     }
 
     function sayGoodbye() {
-      alert("Tạm biệt!");
+      alert("Tạm biệt! An");
     }
   </script>
 </body>
