--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <h1>Demo Buttons</h1>
   <button onclick="sayHello()">Xin chào</button>
   <button onclick="sayGoodbye()">Tạm biệt</button>
+  <button onclick="sayHuy()">Chào Huy</button>
 
   <script>
     function sayHello() {
@@ -37,6 +38,9 @@
 
     function sayGoodbye() {
       alert("Tạm biệt!");
+    }
+    function sayHuy() {
+      alert("Chào Huy");
     }
   </script>
 </body>
